world_macros/tests/fails_if_author_empty.stderr
error: String cannot be empty
 --> tests/fails_if_author_empty.rs:5:32
  |
5 |     let _map = puzzle!("Name", "",
  |                                ^^
